@@ -20,6 +20,26 @@ compileJava {
 run {
 //    setArgs(['edomh://wishlist?eyJldmVudCI6Indpc2hsaXN0IiwidmVyc2lvbiI6IjEiLCJ3aXNobGlzdCI6eyJ1dWlkIjoiMGU4OGE4MzEtMGY1ZS00NjczLWEwODItMzk4YTRmMjA5NDU0IiwibmFtZSI6IkRlZmF1bHQgd2lzaGxpc3QiLCJpdGVtcyI6W3sicmVjaXBlTmFtZSI6IktBUk1BXzRfNSIsInZpc2libGUiOnRydWV9LHsicmVjaXBlTmFtZSI6Ik1BTlRJQ09SRV80XzUiLCJ2aXNpYmxlIjp0cnVlfSx7InJlY2lwZU5hbWUiOiJNQUdBWklORV9TSVpFIiwidmlzaWJsZSI6dHJ1ZX0seyJyZWNpcGVOYW1lIjoiS0FSTUFfMV8yIiwidmlzaWJsZSI6dHJ1ZX1dfX0='])
     jvmArgs = [
+//            '-XX:+UseShenandoahGC',
+//            '-XX:+UnlockExperimentalVMOptions',
+//            '-XX:ShenandoahGCMode=generational',
+//            '-Xlog:gc+heap=debug',
+//            '-XX:MinHeapFreeRatio=5',
+//            '-XX:MaxHeapFreeRatio=15',
+//            '-XX:InitiatingHeapOccupancyPercent=15',
+//            '-XX:+ShenandoahUncommit',
+//            '-XX:ShenandoahUncommitDelay=1000',
+
+            '-XX:+UseG1GC',
+            '-XX:MinHeapFreeRatio=5',
+            '-XX:MaxHeapFreeRatio=10',
+            '-XX:InitiatingHeapOccupancyPercent=15',
+            '-XX:G1ReservePercent=10',
+            '-XX:G1HeapWastePercent=2',
+            '-Xlog:gc*=info',
+            '-XX:G1PeriodicGCInterval=10000',
+            '-XX:+G1PeriodicGCInvokesConcurrent',
+            '-Xmx2048M',
 //            '-Dprism.verbose=true',
 //            '--add-opens=javafx.graphics/javafx.scene.layout=nl.jixxed.eliteodysseymaterials',
 '--add-exports=javafx.graphics/com.sun.glass.ui=nl.jixxed.eliteodysseymaterials',
